Improved menu: 
-can now use PgUp,PgDn to jump menu pages
-added setting to disable File Utilities menu
-added more cyrillic characters support
-disabled menu items (the ones in red) are now called as "unavailable" instead of "disabled"


Improved accesibility: 
-say when a selected menu item is not available
-Mac OS speech filter doesn't fail anymore when message has "-"

Improved assembler: added defs command
Improved AY Sheet: now you can select which AY Chip to show
Improved file selector: when asking for a directory, only shows directories, not files
Improved curses driver: symbol @ simulates ESC on menu
Improved snapshot loading: now setting "--sna-no-change-machine" becomes "--snap-no-change-machine" and applies to .sna and .z80
Improved curses driver: now can use utf "blocky" characters and have 64x48 resolution
Improved accurate Z80 timing: IM mode 0 is 1 t-state shorter than IM mode 1
Improved real tape loading: acceleration is disabled by default, added setting to save configuration

Fixed Pentagon border: now ukflag demo is perfect
Fixed Spectrum 128k machines border: now ula128, scroll2017 demos are perfect
Fixed f_seek call on esxdos handler
Fixed segfault error when using breakpoints like peek/opcode in config file
Fixed bug on zxuno changing video ram 5/7 when paging was disabled by bit DI7FFD
Fixed average cpu statistics when footer is not enabled
Fixed kempston mouse emulation on Next machine: wheel bits always return 0
Fixed bug extracting PAWS words when a word is a pronoun
Fixed undocumented opcode ED76: I had IM0 but it's IM1
Fixed loading and saving +3 .z80 snapshots
Fixed placing menu windows when using zx desktop and machines TSConf, TBBlue, CPC and QL
Fixed bug loading .sna files when rom 1 paged in
Fixed bug on return flags from tape load trap. It only affected Rocman game and enabling "any flag loading" setting

Fixed Accessibility bugs: 
-now menu settings (anything between square brackets []) are played at the end of the menu line